导航页样式微调

--- a/app/views/guide.html
+++ b/app/views/guide.html
@@ -13,7 +13,7 @@
 <body>
     <div class="guide-container">
         <header>
-            <div class="with-1200">
+            <div class="width-1200">
                 <h1>Model-Driven Framework (MDF)</h1>
                 <p class="introduction">
                     MDF框架是一个基于元数据的模型驱动开发框架。它支持通过模式化的配置自动生成并渲染页面，
@@ -29,7 +29,7 @@
             </div>
         </header>
         <section class="quick-start">
-            <div class="with-1200">
+            <div class="width-1200">
                 <p class="title">
                     快速入门
                     <span class="line"></span>
@@ -84,7 +84,7 @@
             </div>
         </section>
         <section class="doc-guide-item visible-development">
-            <div class="with-1200">
+            <div class="width-1200">
                 <div class="inner">
                     <p class="title">
                         可视化开发
@@ -114,10 +114,10 @@
                     </div>
                 </div>
                 <img src="./images/visible-development.png" alt='' />
-            </div class="with-1200">
+            </div class="width-1200">
         </section>
         <section class="doc-guide-item gray viewmodel">
-            <div class="with-1200">
+            <div class="width-1200">
                 <div class="inner">
                     <p class="title">
                         数据模型
@@ -149,10 +149,10 @@
                     </div>
                 </div class="inner">
                 <img src="./images/viewmodel.png" alt='' />
-            </div class="with-1200">
+            </div class="width-1200">
         </section>
         <section class="doc-guide-item mdx">
-            <div class="with-1200">
+            <div class="width-1200">
                 <div class="inner">
                     <p class="title">
                         多维扩展
@@ -186,10 +186,10 @@
                     </div>
                 </div class="inner">
                 <img src="./images/mdx.png" alt='' />
-            </div class="with-1200">
+            </div class="width-1200">
         </section>
         <section class="doc-guide-item gray advanced-features">
-            <div class="with-1200">
+            <div class="width-1200">
                 <div class="inner">
                     <p class="title">
                         高级特性
@@ -228,7 +228,7 @@
                 <a href='参照设计说明'>
                     <div class="content">
                         <p class="title-main">参照</p>
-                        <p class="description">设计原理、参照类型</p class="description">
+                        <p class="description" title='设计原理、参照类型、外部获取model方式'>设计原理、参照类型、外部获取model方式</p class="description">
                     </div>
                 </a>
                 <a href="7.打印使用">
@@ -252,13 +252,13 @@
                 <a href="8.流程使用">
                     <div class="content">
                         <p class="title-main">流程</p>
-                        <p class="description">流程准备工作、模型设计、与表单绑定</p class="description">
+                        <p class="description" title="流程准备工作、模型设计、与表单绑定">流程准备工作、模型设计、与表单绑定</p class="description">
                     </div>
                 </a>
                 <a href="页面状态规则配置使用及示例">
                     <div class="content">
                         <p class="title-main">页面状态</p>
-                        <p class="description">启用配置、formularule场景、staterule场景</p>
+                        <p class="description" title='启用配置、formularule场景、staterule场景'>启用配置、formularule场景、staterule场景</p>
                     </div>
                 </a>
             </div>
