增加两张背景图

--- a/app/views/guide.html
+++ b/app/views/guide.html
@@ -186,6 +186,7 @@
                     </div>
                 </div class="inner">
                 <img src="./images/mdx.png" alt='' />
+                <img src="./images/dot.png" alt='' class="dot" />
             </div class="width-1200">
         </section>
         <section class="doc-guide-item gray advanced-features">
@@ -217,6 +218,7 @@
                     </div>
                 </div class="inner">
                 <img src="./images/advanced-features.png" alt='' />
+                <img src="./images/dot.png" alt='' class="dot" />
             </div>
         </section>
         <section class="doc-guide-item services">
