替换图片，调整样式

--- a/app/views/guide.html
+++ b/app/views/guide.html
@@ -114,6 +114,7 @@
                     </div>
                 </div>
                 <img src="./images/visible-development.png" alt='' />
+                <img src="./images/dot.png" alt='' class="dot" />
             </div class="width-1200">
         </section>
         <section class="doc-guide-item gray viewmodel">
@@ -149,6 +150,7 @@
                     </div>
                 </div class="inner">
                 <img src="./images/viewmodel.png" alt='' />
+                <img src="./images/dot.png" alt='' class="dot" />
             </div class="width-1200">
         </section>
         <section class="doc-guide-item mdx">
