--- a/static/css/adapter.css
+++ b/static/css/adapter.css
@@ -6,6 +6,15 @@
     background-color: #fff;
     display: none;
 }
+.doc___1nCBn{
+    font-size: 14px;
+}
+.doc___1nCBn.active___1cwBk .title___16h5c{
+    color:#E14C46;
+}
+
+
+
 .footer>.u-row{
     margin: 0;
 }
