--- a/static/css/adapter.css
+++ b/static/css/adapter.css
@@ -12,7 +12,12 @@
 .doc___1nCBn.active___1cwBk .title___16h5c{
     color:#E14C46;
 }
-
+.sider___2ABQ8{
+    padding-left: 40px;
+}
+.header___29n2S{
+    padding-left: 40px;
+}
 
 
 .footer>.u-row{
